examples/pass/types/generic.dew
// expect: 42
// Tier: Small
// Compile-time generic type resolution.
def identity = fn(x: Int) -> Int { x };
def get_answer = fn(x: Int) -> Int { identity(x) };
def main = fn { get_answer(42) -> stdout; };
